--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Amina Aziz</h3>
                 <p>Technical Director</p>
-                <p>Email: amina[at]navitionai.com</p>
+                <p>Email: amina[at]navition.ai</p>
             </div>
         </div>
         <!-- Team Member 2 -->
@@ -819,7 +819,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Veda Kannan</h3>
                 <p>Lead Data Scientist</p>
-                <p>Email: veda[at]navitionai.com</p>
+                <p>Email: veda[at]navition.ai</p>
             </div>
         </div>
         <!-- Team Member 3 -->
@@ -828,7 +828,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Nadiah Habib</h3>
                 <p>Machine Learning Specialist</p>
-                <p>Email: nadiah[at]navitionai.com</p>
+                <p>Email: nadiah[at]navition.ai</p>
             </div>
         </div>
         <!-- Team Member 4 -->
@@ -837,7 +837,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Hyun Lee</h3>
                 <p>Data Analysis</p>
-                <p>Email: hyun[at]navitionai.com</p>
+                <p>Email: hyun[at]navition.ai</p>
             </div>
         </div>
         <!-- Team Member 5 -->
@@ -846,7 +846,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Zaki Abu</h3>
                 <p>Project Manager</p>
-                <p>Email: zaki[at]navitionai.com</p>
+                <p>Email: zaki[at]navition.ai</p>
             </div>
         </div>
         <!-- Team Member 6 -->
@@ -855,7 +855,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Ran Huang</h3>
                 <p>Project Manager</p>
-                <p>Email: ran[at]navitionai.com</p>
+                <p>Email: ran[at]navition.ai</p>
             </div>
         </div>
         <!-- Team Member 7 -->
@@ -864,7 +864,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Tony Su</h3>
                 <p>Project Manager</p>
-                <p>Email: tony[at]navitionai.com</p>
+                <p>Email: tony[at]navition.ai</p>
             </div>
         </div>
         <!-- Team Member 8 -->
@@ -873,7 +873,7 @@ def sentiment_analysis(text):
             <div>
                 <h3>Aminah Wong</h3>
                 <p>Marketing</p>
-                <p>Email: aminah[at]navitionai.com</p>
+                <p>Email: aminah[at]navition.ai</p>
             </div>
         </div>
     </div>
@@ -888,24 +888,24 @@ def sentiment_analysis(text):
             <div class="contact-item">
                 <h3>Singapore Office</h3>
                 <p>Amina Lee / Ting Huang</p>
-                <p>Tel: 800-150-3122, Email: sg[at]navitionai.com</p>
+                <p>Tel: 800-150-3122, Email: sg[at]navition.ai</p>
                 <p>150 Beach Rd, Gateway West, Singapore</p>
             </div>
             <div class="contact-item">
                 <h3>South Korea Office</h3>
                 <p>Min Kim / Jean Song</p>
-                <p>Tel: 308-491-0379, Email: kr[at]navitionai.com</p>
+                <p>Tel: 308-491-0379, Email: kr[at]navition.ai</p>
             </div>
             <div class="contact-item">
                 <h3>North America Office</h3>
                 <p>To be announced</p>
-                <p>Email: na[at]navitionai.com</p>
+                <p>Email: na[at]navition.ai</p>
                 <p>3rd St 2nd Floor, San Francisco, CA</p>
             </div>
             <div class="contact-item">
                 <h3>France Office</h3>
                 <p>Caroline Pierre</p>
-                <p>Email: fr[at]navitionai.com</p>
+                <p>Email: fr[at]navition.ai</p>
             </div>
         </div>
     </div>
