--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ footer a:focus {
 <body>
 
 <header>
-    <img src="logo.png">
+    <img src="logo.png"><br>
+    <font style="color: #ff00fc">Our goal: To become the leading AI-driven digital transformation service provider in Korean.</font><br>
     <h1>
         <script>
             const imageFront = document.querySelector('.image:not(.back)');
