--- a/index.html
+++ b/index.html
@@ -235,8 +235,9 @@ footer a:focus {
 <body>
 
 <header>
-    <img src="logo.png"><br>
-    <font style="color: #ff00fc">Our goal: To become the leading AI-driven digital transformation service provider in Korean.</font><br>
+    <img src="logo.png"><br><font style="color: #ff00fc">
+    We are a small team, but we enjoy growing every day together with our clients.<br>
+    Our goal: To become the leading AI-driven digital transformation service provider in Korean.</font><br>
     <h1>
         <script>
             const imageFront = document.querySelector('.image:not(.back)');
