--- a/index.html
+++ b/index.html
@@ -823,16 +823,30 @@ def sentiment_analysis(text):
     <h1><img src="https://img.icons8.com/ios/40/000000/company.png" alt="Link Icon" /> Our Team</h1>
     <p></p>
     <div class="team-container">
-        <!-- Team Member 1 -->
+        <div class="team-member">
+            <img src="member.jpg" alt="Nadiah Habib">
+            <div>
+                <h3>Min Kim</h3>
+                <p>Machine Learning Specialist</p>
+                <p>Email: min[at]navition.ai</p>
+            </div>
+        </div>
+        <div class="team-member">
+            <img src="member.jpg" alt="Nadiah Habib">
+            <div>
+                <h3>Jean Song</h3>
+                <p>Machine Learning Specialist</p>
+                <p>Email: jean[at]navition.ai</p>
+            </div>
+        </div>
         <div class="team-member">
             <img src="amina.jpg" alt="Amina Lee">
             <div>
                 <h3>Amina Aziz</h3>
-                <p>Technical Director</p>
+                <p>Director</p>
                 <p>Email: amina[at]navition.ai</p>
             </div>
         </div>
-        <!-- Team Member 2 -->
         <div class="team-member">
             <img src="veda.jpg" alt="Veda Kannan">
             <div>
@@ -841,7 +855,6 @@ def sentiment_analysis(text):
                 <p>Email: veda[at]navition.ai</p>
             </div>
         </div>
-        <!-- Team Member 3 -->
         <div class="team-member">
             <img src="member.jpg" alt="Nadiah Habib">
             <div>
@@ -850,7 +863,6 @@ def sentiment_analysis(text):
                 <p>Email: nadiah[at]navition.ai</p>
             </div>
         </div>
-        <!-- Team Member 4 -->
         <div class="team-member">
             <img src="hyun.jpg" alt="Hyun Lee">
             <div>
@@ -859,7 +871,6 @@ def sentiment_analysis(text):
                 <p>Email: hyun[at]navition.ai</p>
             </div>
         </div>
-        <!-- Team Member 5 -->
         <div class="team-member">
             <img src="zaki.jpg" alt="Zaki Abu">
             <div>
@@ -868,25 +879,22 @@ def sentiment_analysis(text):
                 <p>Email: zaki[at]navition.ai</p>
             </div>
         </div>
-        <!-- Team Member 6 -->
         <div class="team-member">
             <img src="member.jpg" alt="Ran Huang">
             <div>
-                <h3>Ran Huang</h3>
+                <h3>Eva Choi</h3>
                 <p>Project Manager</p>
                 <p>Email: ran[at]navition.ai</p>
             </div>
         </div>
-        <!-- Team Member 7 -->
         <div class="team-member">
             <img src="member.jpg" alt="Tony Su">
             <div>
-                <h3>Tony Su</h3>
+                <h3>Jacky Lim</h3>
                 <p>Project Manager</p>
-                <p>Email: tony[at]navition.ai</p>
+                <p>Email: jacky[at]navition.ai</p>
             </div>
         </div>
-        <!-- Team Member 8 -->
         <div class="team-member">
             <img src="member.jpg" alt="Aminah Wong">
             <div>
@@ -905,7 +913,7 @@ def sentiment_analysis(text):
         <div>
             <div class="contact-item">
                 <h3>Singapore Office</h3>
-                <p>Amina Lee / Ting Huang</p>
+                <p>Amina Lee / Eva Choi</p>
                 <p>Tel: 800-150-3122, Email: sg[at]navition.ai</p>
                 <p>150 Beach Rd, Gateway West, Singapore</p>
             </div>
