--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@ def sentiment_analysis(text):
     <p></p>
     <div class="team-container">
         <div class="team-member">
-            <img src="member.jpg" alt="Nadiah Habib">
+            <img src="member.jpg">
             <div>
                 <h3>Min Kim</h3>
                 <p>Machine Learning Specialist</p>
@@ -832,7 +832,7 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="member.jpg" alt="Nadiah Habib">
+            <img src="member.jpg">
             <div>
                 <h3>Jean Song</h3>
                 <p>Machine Learning Specialist</p>
@@ -840,7 +840,7 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="amina.jpg" alt="Amina Lee">
+            <img src="amina.jpg">
             <div>
                 <h3>Amina Aziz</h3>
                 <p>Director</p>
@@ -848,7 +848,7 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="veda.jpg" alt="Veda Kannan">
+            <img src="veda.jpg">
             <div>
                 <h3>Veda Kannan</h3>
                 <p>Lead Data Scientist</p>
@@ -856,7 +856,7 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="member.jpg" alt="Nadiah Habib">
+            <img src="member.jpg">
             <div>
                 <h3>Nadiah Habib</h3>
                 <p>Machine Learning Specialist</p>
@@ -864,7 +864,7 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="hyun.jpg" alt="Hyun Lee">
+            <img src="hyun.jpg">
             <div>
                 <h3>Hyun Lee</h3>
                 <p>Data Analysis</p>
@@ -872,7 +872,7 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="zaki.jpg" alt="Zaki Abu">
+            <img src="zaki.jpg">
             <div>
                 <h3>Zaki Abu</h3>
                 <p>Project Manager</p>
@@ -880,15 +880,15 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="member.jpg" alt="Ran Huang">
+            <img src="member.jpg">
             <div>
-                <h3>Eva Choi</h3>
+                <h3>Brian Choi</h3>
                 <p>Project Manager</p>
-                <p>Email: ran[at]navition.ai</p>
+                <p>Email: brian[at]navition.ai</p>
             </div>
         </div>
         <div class="team-member">
-            <img src="member.jpg" alt="Tony Su">
+            <img src="member.jpg">
             <div>
                 <h3>Jacky Lim</h3>
                 <p>Project Manager</p>
@@ -896,7 +896,7 @@ def sentiment_analysis(text):
             </div>
         </div>
         <div class="team-member">
-            <img src="member.jpg" alt="Aminah Wong">
+            <img src="member.jpg">
             <div>
                 <h3>Aminah Wong</h3>
                 <p>Marketing</p>
@@ -913,7 +913,7 @@ def sentiment_analysis(text):
         <div>
             <div class="contact-item">
                 <h3>Singapore Office</h3>
-                <p>Amina Lee / Eva Choi</p>
+                <p>Amina Lee / Brian Choi</p>
                 <p>Tel: 800-150-3122, Email: sg[at]navition.ai</p>
                 <p>150 Beach Rd, Gateway West, Singapore</p>
             </div>
