--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@ def sentiment_analysis(text):
         <div class="team-member">
             <img src="amina.jpg">
             <div>
-                <h3>Amina Aziz</h3>
+                <h3>Amina Lee</h3>
                 <p>Director</p>
                 <p>Email: amina[at]navition.ai</p>
             </div>
