--- a/index.html
+++ b/index.html
@@ -337,11 +337,11 @@ footer a:focus {
 </header>
 
 <nav>
-    <a href="#about">About Us</a>
+    <a href="#about">About</a>
     <a href="#cases">Focus</a>
     <a href="#services">Services</a>
-    <a href="#team">Our Team</a>
-    <a href="#contact">Contact Us</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
 </nav>
 
 <img class="about-img" src="about-image.jpg">
